--- a/司法-民事/公司法.md
+++ b/司法-民事/公司法.md
@@ -18,21 +18,21 @@
 
 > 釋：一、為配合公司登記電腦化作業，無核發公司執照之必要。二、若公司解散或經勒令歇業後，公司仍持有公司執照，作為交易工具者，則恐有危害社會交易安全之虞；且目前行政機關行政作業上，均以公司執照影本為據，核發相關證照，致解散或經勒令歇業之公司仍得持公司執照影本辦理，實務上滋生爭議，爰予刪除「並發給執照」之文字，以杜紛擾。
 
-* 7 公司申請設立、變更登記之資本額，應先經會計師查核簽證；其辦法，由中央主管機關定之。
+* 7 公司申請設立登記之資本額，應經會計師查核簽證；公司應於申請設立登記時或設立登記後三十日內，檢送經會計師查核簽證之文件。公司申請變更登記之資本額，應先經會計師查核簽證。前二項查核簽證之辦法，由中央主管機關定之。
 
-> 釋：審酌公司登記主管機關為查核公司登記資本之確實性，爰將原條文修正為規定公司申請設立、變更登記之資本額應先經會計師查核簽證；其辦法，由中央主管機關定之，以符合行政程序法。
+> 釋：一、為配合九十八年四月二十九日修正公司法第一百條第二項及第一百五十六條第三項，刪除授權由中央主管機關訂定公司設立最低資本額法源之改革措施，並為便利民眾申請設立公司，提升企業開辦效率，將原公司設立登記時，應先經會計師查核簽證之規定，修正為應於申請設立登記時或設立登記後三十日內，檢送經會計師查核簽證之文件。二、公司設立後，資本額如有變更，於申請變更登記時，仍應先經會計師查核簽證。原條文有關公司申請變更登記資本額之查核簽證規定，移列第二項。三、有關公司設立或變更登記資本額之查核簽證辦法，授權中央主管機關定之。原條文有關授權訂定辦法之規定，移列第三項。
 
-* 8 本法所稱公司負責人：在無限公司、兩合公司為執行業務或代表公司之股東；在有限公司、股份有限公司為董事。公司之經理人或清算人，股份有限公司之發起人、監察人、檢查人、重整人或重整監督人，在執行職務範圍內，亦為公司負責人。
+* 8 本法所稱公司負責人：在無限公司、兩合公司為執行業務或代表公司之股東；在有限公司、股份有限公司為董事。公司之經理人或清算人，股份有限公司之發起人、監察人、檢查人、重整人或重整監督人，在執行職務範圍內，亦為公司負責人。公開發行股票之公司之非董事，而實質上執行董事業務或實質控制公司之人事、財務或業務經營而實質指揮董事執行業務者，與本法董事同負民事、刑事及行政罰之責任。但政府為發展經濟、促進社會安定或其他增進公共利益等情形，對政府指派之董事所為之指揮，不適用之。
 
-> 釋：一、配合股份兩合公司之刪除，將第一項末段「在股份兩合公司為無限責任股東」及第二項「．．．股份兩合公司之監察人或檢查人．．．」等字刪除。二、配合第一百零八條有限公司採董事單軌制之修正，將第一項「為董事或執行業務股東；在」及第二項「有限公司之監察人」刪除。三、「重整監督人」依本法第二百九十七條至第三百條及第三百零六條規定，既有重整工作之負擔，而依第三百十三條規定，又與檢查人、重整人同有民刑事責任之負擔，爰於第二項增列為負責人。
+> 釋：第一、二項維持原條文，不予修正。增列第三項。
 
 * 9 公司應收之股款，股東並未實際繳納，而以申請文件表明收足，或股東雖已繳納而於登記後將股款發還股東，或任由股東收回者，公司負責人各處五年以下有期徒刑、拘役或科或併科新臺幣五十萬元以上二百五十萬元以下罰金。有前項情事時，公司負責人應與各該股東連帶賠償公司或第三人因此所受之損害。第一項裁判確定後，由檢察機關通知中央主管機關撤銷或廢止其登記。但裁判確定前，已為補正或經主管機關限期補正已補正者，不在此限。公司之設立或其他登記事項有偽造、變造文書，經裁判確定後，由檢察機關通知中央主管機關撤銷或廢止其登記。
 
 > 釋：一、按公司法負責人為第一項規定之違法行為，自依該項規定受刑事制裁，至於公司與負責人之行為宜予區別，為考量公司已持續經營狀態，如驟以撤銷，對於社會交易相對人及債權人之保障，恐衍生另一問題，因此，於未確定判決前，給予公司補正資本之程序，爰增訂第三項但書。二、第三項後段規定移列為第四項，並酌作文字修正。
 
-* 10 公司有左列情事之一者，主管機關得依職權或利害關係人之申請，命令解散之：一、公司設立登記後六個月尚未開始營業者。但已辦妥延展登記者，不在此限。二、開始營業後自行停止營業六個月以上者。但已辦妥停業登記者，不在此限。
+* 10 公司有下列情事之一者，主管機關得依職權或利害關係人之申請，命令解散之：一、公司設立登記後六個月尚未開始營業。但已辦妥延展登記者，不在此限。二、開始營業後自行停止營業六個月以上。但已辦妥停業登記者，不在此限。三、公司名稱經法院判決確定不得使用，公司於判決確定後六個月內尚未辦妥名稱變更登記，並經主管機關令其限期辦理仍未辦妥。四、未於第七條第一項所定期限內，檢送經會計師查核簽證之文件者。但於主管機關命令解散前已檢送者，不在此限。
 
-> 釋：一、臺灣省政府功能業務與組織調整，臺灣省部分由經濟部辦理，在直轄市由直轄市政府辦理，第一項序文酌作修正。二、按公司自始未營業與營業後自行停業係屬二事，爰予分列二款以資明確；又公司欲延展開業或暫停營業者，應依修正條文第四百零二條之一辦理，爰修正第一項第一款，且將第一款本文後段移列為第二款。三、營利事業登記與否，營業稅法中已有規範，不宜於本法中再行規定，爰刪除第一項第二款。四、第二項所定違反法令之定義為何，並不明確，爰予以刪除。
+> 釋：一、序文配合法制用語，酌作文字修正。二、鑒於公司設立登記後，其資本額查核簽證之文件，依修正條文第七條第一項規定，固得於設立登記後三十日內檢送之，惟公司設立登記之資本額，仍應符合資本確實原則，以保障股東權益。對於公司未於修正條文第七條第一項所定期限內，檢送經會計師查核簽證之文件者，主管機關得依職權或利害關係人之申請，命令解散之；但於主管機關命令解散前，公司已檢送者，不在此限。爰增訂第四款。
 
 * 11 公司之經營，有顯著困難或重大損害時，法院得據股東之聲請，於徵詢主管機關及目的事業中央主管機關意見，並通知公司提出答辯後，裁定解散。前項聲請，在股份有限公司，應有繼續六個月以上持有已發行股份總數百分之十以上股份之股東提出之。
 
@@ -84,9 +84,9 @@
 
 > 釋：一、第一項文字酌作修正。有關證明文件、單據、表冊及有關資料等，增列除法律另有規定外，應保守秘密。二、公司提出之證明文件等如有虛偽記載者，應依刑法規定處罰，爰修正第二項，刪除有關「依刑法或特別刑法有關規定處罰」之贅文；又罰鍰數額酌予調整，並採連續罰。
 
-* 23 公司負責人應忠實執行業務並盡善良管理人之注意義務，如有違反致公司受有損害者，負損害賠償責任。公司負責人對於公司業務之執行，如有違反法令致他人受有損害時，對他人應與公司負連帶賠償之責。
+* 23 公司負責人應忠實執行業務並盡善良管理人之注意義務，如有違反致公司受有損害者，負損害賠償責任。公司負責人對於公司業務之執行，如有違反法令致他人受有損害時，對他人應與公司負連帶賠償之責。公司負責人對於違反第一項之規定，為自己或他人為該行為時，股東會得以決議，將該行為之所得視為公司之所得。但自所得產生後逾一年者，不在此限。
 
-> 釋：一、為明確規定公司負責人對於公司應踐行之忠實義務及注意義務，並對公司負責人違反致公司受有損害，應負損害賠償責任，爰增訂第一項。二、原條文移列為第二項。
+> 釋：原公司法第二十三條「負責人忠實義務」之規定，係延續自英美法及日本商法「公司與董事間之委任關係」而來。公司法第二百零九條第三項「股東歸入權」以避免公司負責人動輒中飽私囊並逕為脫產。原公司法第二十三條顯有增訂該規定之必要。
 
 * 24 解散之公司除因合併、分割或破產而解散外，應行清算。
 
@@ -100,9 +100,13 @@
 
 > 釋：一、本條新增。二、按撤銷或廢止登記與解散同屬公司法人人格消滅之法定事由，亦有進行清算以了結債權債務關係之必要，原條文並未規定，爰予增訂，以符合行政程序法。
 
-* 27 政府或法人為股東時，得當選為董事或監察人。但須指定自然人代表行使職務。政府或法人為股東時，亦得由其代表人當選為董事或監察人，代表人有數人時，得分別當選。第一項及第二項之代表人，得依其職務關係，隨時改派補足原任期。對於第一項、第二項代表權所加之限制，不得對抗善意第三人。
+* 26.2 經解散、撤銷或廢止登記之公司，自解散、撤銷或廢止登記之日起，逾十年未清算完結，或經宣告破產之公司，自破產登記之日起，逾十年未獲法院裁定破產終結者，其公司名稱得為他人申請核准使用，不受第十八條第一項規定之限制。但有正當理由，於期限屆滿前六個月內，報中央主管機關核准者，仍受第十八條第一項規定之限制。
 
-> 釋：有限公司執行業務之機關採董事單軌制，且政府或法人亦無或不得擔任無限公司、兩合公司執行業務股東之限制，爰修正第一項、第二項，刪除「被推為執行業務股東或」、「被推或」等文字，俾符實際。
+> 釋：一、本條新增。二、按經解散、撤銷或廢止登記之公司，係屬不得再經營業務之公司，依法應行清算。惟實務上，經解散、撤銷或廢止登記之公司，多數未進行清算。按第六條及第二十五條規定，公司之法人人格始於登記完成，終於清算完結。公司如未清算完結，因法人人格尚存在，其公司名稱仍受保護而不得為他人申請使用。此種情形，並不合理，爰予修正，明定經解散、撤銷或廢止登記之公司，超過十年未清算完結者，其公司名稱得為他人申請使用。又為避免與第十八條第一項「公司名稱，不得與他公司名稱相同…」之規定扞格，爰排除該項規定之適用。三、依司法院九十六年一月二十五日秘台廳民二字第０九六０００二二０八號函略以：「法院宣告公司破產之裁定遭抗告法院裁定廢棄，駁回破產之聲請確定，該宣告公司破產之裁定即失其效力，公司之人格自不因而消滅…」，上開見解業取代最高法院六十二年二月二十日第一次民事庭庭長會議決議「法人宣告破產後，其法人人格即歸消滅」之見解。四、經濟部辦理公司名稱之預查，向依上開最高法院六十二年度決議之見解，於公司經宣告破產後，其名稱即開放他人申請使用。為配合司法院變更其見解，對於經宣告破產之公司，不再開放其名稱供他人申請使用。惟亦不宜長久禁止他人申請使用，爰明定公司自破產登記之日起，逾十年未獲法院裁定破產終結者，開放其名稱供人申請。五、對於已進行清算或破產程序之公司，如有正當理由無法於十年內清算完結或破產終結，得於期限屆滿前六個月內，報中央主管機關核准，仍得適用第十八條第一項規定，以防止其名稱開放他人申請使用，爰增訂但書。
+
+* 27 政府或法人為股東時，得當選為董事或監察人。但須指定自然人代表行使職務。政府或法人為股東時，亦得由其代表人當選為董事或監察人。代表人有數人時，得分別當選，但不得同時當選或擔任董事及監察人。第一項及第二項之代表人，得依其職務關係，隨時改派補足原任期。對於第一項、第二項代表權所加之限制，不得對抗善意第三人。
+
+> 釋：第一、三、四項維持原條文，不予修正。第二項修正為：「政府或法人為股東時，亦得由其代表人當選為董事或監察人。代表人有數人時，得分別當選，但不得同時當選或擔任董事及監察人。」。
 
 * 28 公司之公告應登載於本公司所在之直轄市或縣（市）日報之顯著部分。但公開發行股票之公司，證券管理機關另有規定者，不在此限。
 
@@ -582,9 +586,9 @@
 
 > 釋：為避免股務作業之不便與爭議，股東之委託書送達公司後，欲親自出席股會時，至遲應於股東會開會前一日撤銷委託，不得於股東會召開當日撤銷委託，其逾期撤銷委託者，以委託代理人出席行使之表決權為準，爰增訂第四項。
 
-* 177.1 公司召開股東會時，得採行以書面或電子方式行使其表決權；其以書面或電子方式行使表決權時，其行使方法應載明於股東會召集通知。前項以書面或電子方式行使表決權之股東，視為親自出席股東會。但就該次股東會之臨時動議及原議案之修正，視為棄權。
+* 177.1 公司召開股東會時，得採行以書面或電子方式行使其表決權；其以書面或電子方式行使表決權時，其行使方法應載明於股東會召集通知。但證券主管機關應視公司規模、股東人數與結構及其他必要情況，命其將電子方式列為表決權行使管道之一。前項以書面或電子方式行使表決權之股東，視為親自出席股東會。但就該次股東會之臨時動議及原議案之修正，視為棄權。
 
-> 釋：一、本條新增。二、依原規定，股東出席股東會之方式，有親自出席及委託出席兩種。為鼓勵股東參與股東會之議決，公司得允許股東以書面或依電子簽章法規定之電子方式行使其表決權，惟公司應將書面或電子方式行使股東表決權之方法，載明於股東會召集通知，以資明確，爰為第一項規定。三、股東以書面或電子方式行使表決權時，究發生何種效力，宜予明定，故擬制其效力為親自出席股東會，以資明確。又以書面或電子方式行使表決權之股東，因未當場參與股東會，為使議事順利，明定該股東就該次股東會之臨時動議及原議案之修正，視為棄權，爰為第二項規定。
+> 釋：一、為解決上市櫃公司同日召開股東會造成大部分小股東喪失自身權益問題，我國應透過落實電子化通訊投票制度來保障投資人權益，進而健全市場發展。二、尤其參考先進國家經驗，電子化通訊投票有助於提升公司治理與資訊透明度，對我國資本市場長遠發展有其必要。三、爰於第一項增列但書，要求證券主管機關應視公司規模、股東人數與結構及其他必要情況，命其將電子方式列為表決權行使管道之一。
 
 * 177.2 股東以書面或電子方式行使表決權者，其意思表示應於股東會開會五日前送達公司，意思表示有重複時，以最先送達者為準。但聲明撤銷前意思表示者，不在此限。股東以書面或電子方式行使表決權後，欲親自出席股東會者，至遲應於股東會開會前一日，以與行使表決權相同之方式撤銷前項行使表決權之意思表示；逾期撤銷者，以書面或電子方式行使之表決權為準。股東以書面或電子方式行使表決權，並以委託書委託代理人出席股東會者，以委託代理人出席行使之表決權為準。
 
@@ -602,9 +606,9 @@
 
 * 180 股東會之決議，對無表決權股東之股份數，不算入已發行股份之總數。股東會之決議，對依第一百七十八條規定不得行使表決權之股份數，不算入已出席股東之表決權數。
 
-* 181 政府或法人為股東時，其代表人不限於一人。但其表決權之行使，仍以其所持有之股份綜合計算。前項之代表人有二人以上時，其代表人行使表決權應共同為之。
+* 181 政府或法人為股東時，其代表人不限於一人。但其表決權之行使，仍以其所持有之股份綜合計算。前項之代表人有二人以上時，其代表人行使表決權應共同為之。公開發行公司之股東係為他人持有股份時，股東得主張分別行使表決權。前項分別行使表決權之資格條件、適用範圍、行使方式、作業程序及其他應遵行事項之辦法，由證券主管機關定之。
 
-> 釋：政府或法人之代表人有二人以上時，如不限制其應共同行使股東權，實務上易滋紛擾，尤其各代表人所代表行使股權之計算，極為繁瑣，爰增訂第二項，規定行使表決權應共同為之，以免兩歧。
+> 釋：一、第一項及第二項未修正。二、為使保管機構、信託機構、存託機構或綜合帳戶等專戶之表決權行使，得依其實質投資人之個別指示，分別為贊成或反對之意思表示，爰參考日本公司法第三百十三條規定，股東得不統一行使議決權之立法精神，及信託業法第二十條之一規定，信託業之信託財產為股票，其表決權之行使得分別計算，增訂第三項，明定公開發行公司之股東係為他人持有股份時，股東得主張分別行使表決權。三、增訂第四項，授權證券主管機關訂定相關辦法。
 
 * 182 股東會決議在五日內延期或續行集會，不適用第一百七十二條之規定。
 
@@ -684,9 +688,9 @@
 
 > 釋：董事之解任，對於公司經營運作有重要影響，爰修正第一項，酌作文字修正，並增訂第二項至第四項，由現行普通決議事項改為特別決議事項，以昭慎重。
 
-* 199.1 股東會於董事任期未屆滿前，經決議改選全體董事者，如未決議董事於任期屆滿始為解任，視為提前解任。
+* 199.1 股東會於董事任期未屆滿前，經決議改選全體董事者，如未決議董事於任期屆滿始為解任，視為提前解任。前項改選，應有代表已發行股份總數過半數股東之出席。
 
-> 釋：一、本條新增。二、依第一百九十五條第一項規定，董事係採任期制，又依第一百七十二條規定改選案，雖未同時於議程中就現任董事為決議解任，而實務上均於新任董事就任日視為提前解任，爰增訂本條，俾釐清董事與公司之權益關係。
+> 釋：新增第二項，內容為：「前項改選，應有代表已發行股份總數過半數股東之出席。」
 
 * 200 董事執行業務，有重大損害公司之行為或違反法令或章程之重大事項，股東會未為決議將其解任時，得由持有已發行股份總數百分之三以上股份之股東，於股東會後三十日內，訴請法院裁判之。
 
@@ -712,7 +716,9 @@
 
 > 釋：一、第一項酌作標點符號之修正。二、鑒於電傳科技發達，以視訊會議方式從事會談，亦可達到相互討論之會議效果，與親自出席無異，爰參考外國立法例，增訂第二項。三、原條文第二項至第五項移列第三項至第六項。
 
-* 206 董事會之決議，除本法另有規定外，應有過半數董事之出席，出席董事過半數之同意行之。第一百七十八條、第一百八十條第二項之規定，於前項之決議準用之。
+* 206 董事會之決議，除本法另有規定外，應有過半數董事之出席，出席董事過半數之同意行之。董事對於會議之事項，有自身利害關係時，應於當次董事會說明其自身利害關係之重要內容。第一百七十八條、第一百八十條第二項之規定，於第一項之決議準用之。
+
+> 釋：一、為健全公司治理，促使董事之行為更透明化，以保護投資人權益，董事對於會議之事項，有自身利害關係時，應於當次董事會說明其自身利害關係之重要內容，爰增訂第二項。二、另董事會召集程序、決議內容違反法律者，應認為當然無效（最高法院九十七年台上字第九二五號判決參照）。是以，董事違反修正條文第二項所定之說明義務時，董事會決議因程序瑕疵而當然無效。又董事違反說明義務參與表決者，依修正條文第三項準用第一百七十八條規定，董事會決議因決議方法違法而無效。三、原條文第二項移列第三項，並酌作文字修正。
 
 * 207 董事會之議事，應作成議事錄。前項議事錄準用第一百八十三條之規定。
 
@@ -820,9 +826,9 @@
 
 * 231 各項表冊經股東會決議承認後，視為公司已解除董事及監察人之責任。但董事或監察人有不法行為者，不在此限。
 
-* 232 公司非彌補虧損及依本法規定提出法定盈餘公積後，不得分派股息及紅利。公司無盈餘時，不得分派股息及紅利。但法定盈餘公積已超過實收資本額百分之五十時，得以其超過部分派充股息及紅利。公司負責人違反第一項或前項規定分派股息及紅利時，各處一年以下有期徒刑、拘役或科或併科新臺幣六萬元以下罰金。
+* 232 公司非彌補虧損及依本法規定提出法定盈餘公積後，不得分派股息及紅利。公司無盈餘時，不得分派股息及紅利。公司負責人違反第一項或前項規定分派股息及紅利時，各處一年以下有期徒刑、拘役或科或併科新臺幣六萬元以下罰金。
 
-> 釋：一、第一項酌修標點符號。二、第二項「資本總額」修正為「實收資本額」，俾與本法用語一致。但書後段，基於所稱「百分之二十」如何計算，易滋爭議，且其所稱「盈餘公積」兼含法定及特別盈餘公積，倘係「特別盈餘公積」不宜以之發放股息、紅利，另倘係「法定盈餘公債」，亦應依本項但書前段規定至少留存百分之五十，俾供保護債權人，爰予刪除。
+> 釋：一、第一項未修正。二、依原條文第二項規定，公司無盈餘時，不得分派股息及紅利；惟如符合本項但書規定，無盈餘之公司，於法定盈餘公積超過實收資本額百分之五十時，仍得分派股息及紅利。鑒於公司無盈餘，甚至嚴重虧損時，卻仍得分派股息及紅利，而未先將法定盈餘公積用於彌補虧損，顯不利公司之正常經營，爰將原條文第二項但書刪除。三、第三項未修正。
 
 * 233 公司違反前條規定分派股息及紅利時，公司之債權人，得請求退還，並得請求賠償因此所受之損害。
 
@@ -854,9 +860,9 @@
 
 > 釋：第四項及第五項酌作文字修正。
 
-* 241 公司無虧損者，得依前條規定股東會決議之方法，將法定盈餘公積及左列資本公積之全部或一部撥充資本，按股東原有股份之比例發給新股：一、超過票面金額發行股票所得之溢額。二、受領贈與之所得。前條第五項、第六項之規定，於前項準用之。以法定盈餘公積撥充資本者，以該項公積已達實收資本百分之五十，並以撥充其半數為限。
+* 241 公司無虧損者，得依前條規定股東會決議之方法，將法定盈餘公積及下列資本公積之全部或一部，按股東原有股份之比例發給新股或現金：一、超過票面金額發行股票所得之溢額。二、受領贈與之所得。前條第五項、第六項規定，於前項準用之。以法定盈餘公積發給新股或現金者，以該項公積超過實收資本額百分之二十五之部分為限。
 
-> 釋：一、修正第一項，明定公司必須優先填補虧損後，始得依第二百四十條發行新股。另將「公積修正為「法定盈餘公積及資本公積」，以杜爭議。又資本公積應以已實現者始得轉作資本，爰增訂第一項第一款及第二款，予以明定。二、將第三項「第二百三十七條第一項之」文字刪除，蓋法定盈餘公積之性質在健全公司財務狀況，累積各年度依法提列之公積，自毋庸重述引據之法條。
+> 釋：一、第一項序文之「左列」二字，依目前法制作業統一用語，修正為「下列」。鑒於部分公司於過去年度已累積大量法定盈餘公積及資本公積，如能讓公司彈性運用，為現金股利之發放，當有助於公司維持穩定之股利發放政策，並吸引投資。是以，只要公司無虧損，可允許公司將法定盈餘公積及資本公積之全部或一部，按股東原有股份之比例發給新股或現金。爰修正第一項。二、第二項未修正。三、公司以法定盈餘公積發給新股或現金者，參考日本公司法制以及原規定「……已達實收資本百分之五十，並以撥充其半數為限。」，以超過實收資本百分之二十五之部分為限。爰修正第三項。
 
 * 242 （刪除）
 
@@ -886,7 +892,9 @@
 
 > 釋：一、第一項序文酌作修正，俾資明確。又為解決實務作業困擾，使公司送件時間更具彈性及簡化公司應檢附之書件，第十一款修正為「證券管理機關規定之財務報表」。並增訂第十九款得向證券管理機關申請募集附認股權公司債。第九款酌作文字修正。第十九款、第二十款移列為第二十款、第二十一款。二、修正第二項，罰鍰數額酌作調整，並移列為第四項。三、第三、四項移列為第五、六項。四、為使公司得在授權資本範圍內可視資本市場市況，彈性選擇辦理現金增資發行新股或發行轉換公司債等，以掌握時效，並利於企業經營，爰修正第五項。又「發行人募集與發行有價證券處理準則」乃係依據證券交易法第二十二條訂定，第五項「其處理準則，由證券管理機關以命令定之」純屬贅文，宜予刪除。五、有價證券之私募由於應募者只限於少數之特定人，不若公開承銷涉及層面之廣大，應在規範上予以鬆綁，又配合第一百五十六條修正，將公司股票是否公開發行歸屬於企業自治事項，故私募之發行不必受限於上市、上櫃或公開發行公司。發行前之平均淨利不能保證公司未來之獲利，應依各應募人主觀之認定由其自行承擔投資風險，不需硬性規定平均淨利百分比，亦不必於發行前向主管機關申請或交由其事前審查，只需於發行後備查。使公司在資金募集的管道上更多元化，增訂第二、三項。
 
-* 249 公司有左列情形之一者，不得發行無擔保公司債：一、對於前已發行之公司債或其他債務，曾有違約或遲延支付本息之事實已了結者。二、最近三年或開業不及三年之開業年度課稅後之平均淨利，未達原定發行之公司債，應負擔年息總額之百分之一百五十者。
+* 249 公司有下列情形之一者，不得發行無擔保公司債：一、對於前已發行之公司債或其他債務，曾有違約或遲延支付本息之事實已了結，自了結之日起三年內。二、最近三年或開業不及三年之開業年度課稅後之平均淨利，未達原定發行之公司債，應負擔年息總額之百分之一百五十。
+
+> 釋：一、依據票據法規定，退票後於三年內清償贖回，由票交所註銷其紀錄，如屬個人跳票註銷後，並不影響個人貸款行為，但卻限制公司發行無擔保公司債募集資金。二、公司如發生退票紀錄，不論金額大小、清償與否，均視為違反公司法第二百四十九條第一項規定，且永久無法發行無擔保公司債，有違法律之「比例原則」。三、各產業面對景氣循環與外在環境劇烈衝擊（如金融風暴），而發生財務危機跳票，清償後經過努力改善公司經營體質而成為穩定健全營運的公司（如山鴻鋼鐵、東隆五金等），卻因公司法限制了公司向投資大眾募集資金之管道，對國內產業無疑是一大限制與傷害。四、公司發行擔保公司債需負擔銀行保證費用，相較無擔保公司債而言，增加了籌資公司資金成本負擔。五、公司發行無擔保公司債需向主管機關申請，主管機關即有審查權，建議可透過主管機關的審查把關，排除不良公司，而不應以公司法限制所有公司之辦理權利。
 
 * 250 公司有左列情形之一者，不得發行公司債：一、對於前已發行之公司債或其他債務有違約或遲延支付本息之事實，尚在繼續中者。二、最近三年或開業不及三年之開業年度課稅後之平均淨利，未達原定發行之公司債應負擔年息總額之百分之一百者。但經銀行保證發行之公司債不受限制。
 
