刑事訴訟法 2012.5.25

--- a/司法-刑事/刑事訴訟法.md
+++ b/司法-刑事/刑事訴訟法.md
@@ -980,9 +980,9 @@
 
 * 244 自首向檢察官或司法警察官為之者，準用第二百四十二條之規定。
 
-* 245 偵查，不公開之。被告或犯罪嫌疑人之辯護人，得於檢察官、檢察事務官、司法警察官或司法警察訊問該被告或犯罪嫌疑人時在場，並得陳述意見。但有事實足認其在場有妨害國家機密或有湮滅、偽造、變造證據或勾串共犯或證人或妨害他人名譽之虞，或其行為不當足以影響偵查秩序者，得限制或禁止之。檢察官、檢察事務官、司法警察官、司法警察、辯護人、告訴代理人或其他於偵查程序依法執行職務之人員，除依法令或為維護公共利益或保護合法權益有必要者外，不得公開揭露偵查中因執行職務知悉之事項。偵查中訊問被告或犯罪嫌疑人時，應將訊問之日、時及處所通知辯護人。但情形急迫者，不在此限。
+* 245 偵查，不公開之。被告或犯罪嫌疑人之辯護人，得於檢察官、檢察事務官、司法警察官或司法警察訊問該被告或犯罪嫌疑人時在場，並得陳述意見。但有事實足認其在場有妨害國家機密或有湮滅、偽造、變造證據或勾串共犯或證人或妨害他人名譽之虞，或其行為不當足以影響偵查秩序者，得限制或禁止之。檢察官、檢察事務官、司法警察官、司法警察、辯護人、告訴代理人或其他於偵查程序依法執行職務之人員，除依法令或為維護公共利益或保護合法權益有必要者外，偵查中因執行職務知悉之事項，不得公開或揭露予執行法定職務必要範圍以外之人員。偵查中訊問被告或犯罪嫌疑人時，應將訊問之日、時及處所通知辯護人。但情形急迫者，不在此限。第一項偵查不公開作業辦法，由司法院會同行政院定之。
 
-> 釋：一、修正本條第二項賦予偵查中在場之辯護人陳述意見之機會，以強化被告或犯罪嫌疑人之防禦權，並示區別偵查中之表示意見與審理中之辯論有所不同。二、為配合法院組織法第六十六條之二、第六十六條之三之增訂，於第二項、第三項增列檢察事務官為執行偵查職務之人員。三、修正增訂第三項，規定於偵查程序依法執行職務之人員除依法令或為維護公共利益或保護合法權益有必要者外，不得公開揭露偵查中執行職務知悉之事項，藉以折衷調和。四、參與偵查程序之人無故洩漏偵查程序中所知悉之事項者，刑法第一百三十二條、第三百十六條分別定有處罰明文，爰刪除原第三項。
+> 釋：一、第一項及第二項未修訂。二、基於「不得公開揭露」定義不明，各檢調人員或告訴代理人等解讀各異，造成當事者被圍堵、公開批判、錯誤訊息影響相關人權益，甚至危及性命，建議修正第三項，明定不得公開或揭露予執行法定職務必要範圍以外之人員。三、另增訂第五項，授權訂定偵查不公開作業辦法，以資明確，且符合法律保留原則。
 
 * 246 遇被告不能到場，或有其他必要情形，得就其所在訊問之。
 
