--- a/司法-民事/公司法.md
+++ b/司法-民事/公司法.md
@@ -894,9 +894,9 @@
 
 * 247 公司債之總額，不得逾公司現有全部資產減去全部負債及無形資產後之餘額。無擔保公司債之總額，不得逾前項餘額二分之一。
 
-* 248 公司發行公司債時，應載明左列事項，向證券管理機關辦理之：一、公司名稱。二、公司債總額及債券每張之金額。三、公司債之利率。四、公司債償還方法及期限。五、償還公司債款之籌集計畫及保管方法。六、公司債募得價款之用途及運用計畫。七、前已募集公司債者，其未償還之數額。八、公司債發行價格或最低價格。九、公司股份總數與已發行股份總數及其金額。十、公司現有全部資產，減去全部負債及無形資產後之餘額。十一、證券管理機關規定之財務報表。十二、公司債權人之受託人名稱及其約定事項。十三、代收款項之銀行或郵局名稱及地址。十四、有承銷或代銷機構者，其名稱及約定事項。十五、有發行擔保者，其種類、名稱及證明文件。十六、有發行保證人者，其名稱及證明文件。十七、對於前已發行之公司債或其他債務，曾有違約或遲延支付本息之事實或現況。十八、可轉換股份者，其轉換辦法。十九、附認股權者，其認購辦法。二十、董事會之議事錄。二十一、公司債其他發行事項，或證券管理機關規定之其他事項。公司債之私募不受第二百四十九條第二款及第二百五十條第二款之限制，並於發行後十五日內檢附發行相關資料，向證券管理機關報備；私募之發行公司不以上市、上櫃、公開發行股票之公司為限。前項私募人數不得超過三十五人。但金融機構應募者，不在此限。公司就第一項各款事項有變更時，應即向證券管理機關申請更正；公司負責人不為申請更正時，由證券管理機關各處新臺幣一萬元以上五萬元以下罰鍰。第一項第七款、第九款至第十一款、第十七款，應由會計師查核簽證；第十二款至第十六款，應由律師查核簽證。第一項第十二款之受託人，以金融或信託事業為限，由公司於申請發行時約定之，並負擔其報酬。第一項第十八款之可轉換股份數額或第十九款之可認購股份數額加計已發行股份總數、已發行轉換公司債可轉換股份總數、已發行附認股權公司債可認購股份總數、已發行附認股權特別股可認購股份總數及已發行認股權憑證可認購股份總數，如超過公司章程所定股份總數時，應先完成變更章程增加資本額後，始得為之。
+* 248 公司發行公司債時，應載明下列事項，向證券管理機關辦理之：一、公司名稱。二、公司債總額及債券每張之金額。三、公司債之利率。四、公司債償還方法及期限。五、償還公司債款之籌集計畫及保管方法。六、公司債募得價款之用途及運用計畫。七、前已募集公司債者，其未償還之數額。八、公司債發行價格或最低價格。九、公司股份總數與已發行股份總數及其金額。十、公司現有全部資產，減去全部負債及無形資產後之餘額。十一、證券管理機關規定之財務報表。十二、公司債權人之受託人名稱及其約定事項。公司債之私募不在此限。十三、代收款項之銀行或郵局名稱及地址。十四、有承銷或代銷機構者，其名稱及約定事項。十五、有發行擔保者，其種類、名稱及證明文件。十六、有發行保證人者，其名稱及證明文件。十七、對於前已發行之公司債或其他債務，曾有違約或遲延支付本息之事實或現況。十八、可轉換股份者，其轉換辦法。十九、附認股權者，其認購辦法。二十、董事會之議事錄。二十一、公司債其他發行事項，或證券管理機關規定之其他事項。公司債之私募不受第二百四十九條第二款及第二百五十條第二款之限制，並於發行後十五日內檢附發行相關資料，向證券管理機關報備；私募之發行公司不以上市、上櫃、公開發行股票之公司為限。前項私募人數不得超過三十五人。但金融機構應募者，不在此限。公司就第一項各款事項有變更時，應即向證券管理機關申請更正；公司負責人不為申請更正時，由證券管理機關各處新臺幣一萬元以上五萬元以下罰鍰。第一項第七款、第九款至第十一款、第十七款，應由會計師查核簽證；第十二款至第十六款，應由律師查核簽證。第一項第十二款之受託人，以金融或信託事業為限，由公司於申請發行時約定之，並負擔其報酬。第一項第十八款之可轉換股份數額或第十九款之可認購股份數額加計已發行股份總數、已發行轉換公司債可轉換股份總數、已發行附認股權公司債可認購股份總數、已發行附認股權特別股可認購股份總數及已發行認股權憑證可認購股份總數，如超過公司章程所定股份總數時，應先完成變更章程增加資本額後，始得為之。
 
-> 釋：一、第一項序文酌作修正，俾資明確。又為解決實務作業困擾，使公司送件時間更具彈性及簡化公司應檢附之書件，第十一款修正為「證券管理機關規定之財務報表」。並增訂第十九款得向證券管理機關申請募集附認股權公司債。第九款酌作文字修正。第十九款、第二十款移列為第二十款、第二十一款。二、修正第二項，罰鍰數額酌作調整，並移列為第四項。三、第三、四項移列為第五、六項。四、為使公司得在授權資本範圍內可視資本市場市況，彈性選擇辦理現金增資發行新股或發行轉換公司債等，以掌握時效，並利於企業經營，爰修正第五項。又「發行人募集與發行有價證券處理準則」乃係依據證券交易法第二十二條訂定，第五項「其處理準則，由證券管理機關以命令定之」純屬贅文，宜予刪除。五、有價證券之私募由於應募者只限於少數之特定人，不若公開承銷涉及層面之廣大，應在規範上予以鬆綁，又配合第一百五十六條修正，將公司股票是否公開發行歸屬於企業自治事項，故私募之發行不必受限於上市、上櫃或公開發行公司。發行前之平均淨利不能保證公司未來之獲利，應依各應募人主觀之認定由其自行承擔投資風險，不需硬性規定平均淨利百分比，亦不必於發行前向主管機關申請或交由其事前審查，只需於發行後備查。使公司在資金募集的管道上更多元化，增訂第二、三項。
+> 釋：一、第一項序文中「左列事項」，配合目前法制作業統一用語，修正為「下列事項」。二、原條文第十二款「公司債權人之受託人」及同法第六項明文該受託人「以金融或信託事業為限」。就法條文字言，公開招募與私募之公司債皆須交由金融或信託事業信託。三、然「私募」，是以私人洽購的方式，向法定特定對象募集，並非以一般不特定大眾為對象。私募公司債依證券交易法第四十三條之六規定，係對特定具有一定專業知識或經濟能力者，故應得仰賴其自行判斷該公司是否足以信賴，進而決定是否應募。四、由於私募之對象限定為具保障自己投資權益之財力及能力之法定特定人，故應募者毋須仰賴政府介入保障。五、公司債之私募，由於應募者只限於少數之特定人，不若公開募集涉及層面之廣大。又私募公司債之特點即在於公司得以較簡便迅速的方式、較低的成本來獲取資金。對急需資金之公司，可使資金即時挹注。是以，為符合創設私募制度使企業以較簡便程序及較低成本便利迅速籌資之初衷，對於不涉及公開募集，以特定人為對象之私募公司債，當毋須受託人制度之介入。
 
 * 249 公司有下列情形之一者，不得發行無擔保公司債：一、對於前已發行之公司債或其他債務，曾有違約或遲延支付本息之事實已了結，自了結之日起三年內。二、最近三年或開業不及三年之開業年度課稅後之平均淨利，未達原定發行之公司債，應負擔年息總額之百分之一百五十。
 
