--- a/行政-經濟及能源/電業法.md
+++ b/行政-經濟及能源/電業法.md
@@ -148,9 +148,13 @@
 
 > 釋：一、第一項酌作文字修正及增訂第三項。二、針對電費之計收，現已採行一般家庭每月實際用電度數超過底度者，則以實際用電度數計收電費，不另加計底度費，為符法律明確化原則，爰增訂第三項。
 
-* 65 電業供給自來水、電車、電鐵路等公用事業及各級公私立學校用電，其收費應低於普通電價，但以不低於供電成本為準。前項收費辦法，由中央主管機關定之。
+* 65 電業供給自來水、電車、電鐵路等公用事業、各級公私立學校、庇護工場、立案社會福利機構及護理之家用電，其收費應低於普通電價，但以不低於供電成本為準。前項收費辦法，由中央主管機關定之。第一項所稱庇護工場、立案社會福利機構及護理之家，應經各中央目的事業主管機關認定之。
 
-> 釋：一、現行的學校用電優惠措施雖已行之有年，最近卻被檢討以不具法源依據而有被取消之虞。僉以我國教育預算原已捉襟見肘，如取消電價優惠，勢將排擠原定教育計劃施政經費，且恐加深城鄉學校環境之差距，礙及學生受教權益及其健康與安全等。爰提案修正電業法第65 條，比照公用事業將各級公私立學校納入用電優惠對象，俾保障學校基本用電之需求，維護學生受教權益。二、增列第二項為：「前項收費辦法，由中央主管機關定之。」。
+> 釋：一、依各社會福利法規所成立之公私各種社會福利機構，與政府為隸屬或夥伴關係。各級政府透過自行辦理、公辦民營、或補助、許可，設立身心障礙者、老人、兒童及少年、婦女、遊民等各種社會福利機構。這些社會福利機構肩負社會變遷下所發生的各類福利族群照顧問題的解決。二、電價上漲將造成社會福利機構經營成本的增加，而社會福利相關補助、收費並無法立即反應，且各類型社會福利機構大都訂有收費原則，或至少有相關收費須經各級主管機關備查的機制，而無法經電價成本轉嫁給福利需求者。三、屬勞政主管的庇護工場，和屬衛政主管的護理之家，亦面臨同樣問題。四、以民國九十五年起適用的電價來計算九十七年和一百零一年兩次的漲幅，如以七百度以上來計算，一百零一年五月十五日的電價合理化方案和九十五年比較，夏月漲幅百分之七一點九；非夏月漲幅百分之八十二點八。電價漲後市場都有經營成本的考量，有些已經默默調漲銷售價格，或者有些另抗漲專區，找出市場行銷策略。但社會福利機構卻必須默默承受漲價所帶來的經營困境。五、民國一百年一月七日，各級公私立學校已被納入電業法第六十五條的優惠範圍，爰建議將各公私立社會福利機構、庇護工場和護理之家亦一併修法納入，解決長期以來電價爭議。六、增列第三項：「第一項所稱庇護工場、立案社會福利機構及護理之家，應經各中央目的事業主管機關認定之。」
+
+* 65.1 電業供給使用維生器材及必要生活輔具之身心障礙者家庭用電，維生器材及必要生活輔具用電之收費應以供電成本計價。前項身心障礙者家庭之資格認定；維生器材及生活輔具之適用範圍及電費計算方式，由中央主管機關會同中央目的事業主管機關定之。
+
+> 釋：一、本條新增。二、有些居家的身心障礙者需要使用呼吸器、氧氣製造機、血氧監測儀、咳嗽（痰）機、抽痰機等維生電器，還有氣墊床，冷氣，電熱器、電動輪椅等生活必須的輔具，樣樣都要用電，所以無法省電，卻因為累進計費，讓使用維生電器及生活輔具的身心障礙者家庭，面臨到生存的壓力。對於這些特殊家戶應該以供電成本計價。三、為避免資源錯置與浪費，特制定第二項，由中央主管機關會同中央目的事業主管機關訂定相關申請、審查、撤銷等相關辦法。
 
 * 66 電業供給公用路燈用電，其收費率應低於普通電價。但以不低於普通電燈價之半為準。
 
