--- a/行政-內政/自來水法.md
+++ b/行政-內政/自來水法.md
@@ -206,7 +206,9 @@
 
 > 釋：照黨團協商條文通過。
 
-* 61 自來水事業在其供水區域內，對於請求供水者，非有正當理由，不得拒絕。前項請求供水者，對拒絕供水如有異議，得申請主管機關核定之。
+* 61 自來水事業在其供水區域內，對於申請供水者，非有正當理由，不得拒絕。無自來水地區居民，申請自來水供水之用戶設備外線費用，得由政府逐年編列預算補助，並應優先補助低收入戶；其施設簡易自來水者，亦同。前項補助辦法，由中央主管機關定之。第一項申請供水者，對拒絕供水如有異議，得申請主管機關核定之。
+
+> 釋：一、由於社會的發展，「請求供水」一語，不合時宜，爰修正為「申請供水」。二、用戶設備外線依現行規定，原係由用戶委託自來水事業代辦（費用由用戶負擔，並於繳交費用予自來水事業後辦理），惟考量無自來水地區低收入戶之財力，避免因經濟弱勢而影響用水，爰於第二項訂定得予以補助之規定，並於第三項授權補助辦法由中央主管機關定之。三、配合增列第二、三項，原條文第二項遞改為第四項修正用語。
 
 * 61.1 第二十三條規定之用戶加壓受水設備所使用之私有土地應由用戶取得該私有土地之所有權或地上權，始得供水。用戶加壓受水設備所使用土地為公有土地，應取得公有土地管理機關使用許可或同意書。用戶加壓受水設備所使用土地為既成計畫道路，經道路主管機關許可挖掘埋設者，用戶得免取得所有權或設定地上權，並得為必要之維護與更新。用戶加壓受水設備所使用之土地非屬用戶所有，但自自來水事業供水日起，使用年限已達十年以上者，其用戶就該等土地視為有地上權存在，得於直轄市、縣（市）主管機關同意，並保證工程完畢後恢復原狀下，在取得土地所有權前為必要之維護與更新。用戶使用他人私有或公有土地，應擇其損害最少之處所及方法為之，並予以補償。前項處所、方法選擇及補償如有爭議時，用戶、土地所有權人或使用人得報請直轄市、縣（市）主管機關核定之。第五項補償之核定，得適用第五十三條第三項之裁量基準。第一項加壓受水設備委託自來水事業代管者，自來水事業得計收工程改善費、操作維護費及其他一切必要之費用，其標準由自來水事業訂定，報請主管機關備查。
 
