行政訴訟法 2012.12.21

--- a/司法-行政訴訟/行政訴訟法.md
+++ b/司法-行政訴訟/行政訴訟法.md
@@ -428,9 +428,13 @@
 
 * 130 筆錄或筆錄內所引用附卷或作為附件之文書內所記前條第一款至第六款事項，應依聲請於法庭向關係人朗讀或令其閱覽，並於筆錄內附記其事由。關係人對於筆錄所記有異議者，行政法院書記官得更正或補充之。如以異議為不當，應於筆錄內附記其異議。以機器記錄言詞辯論之進行者，其實施辦法由司法院定之。
 
-* 131 第四十九條第三項至第六項、第五十五條、第六十六條但書、第六十七條但書、第一百條第一項前段、第二項、第一百零七條第一項但書、第一百十條第四項、第一百二十一條第一項第一款至第四款、第二項、第一百二十四條、第一百二十五條及民事訴訟法第四十九條、第七十五條第一項、第一百二十條第一項、第一百二十一條第一項、第二項、第二百條、第二百零七條、第二百零八條、第二百十三條第二項、第二百十三條之一、第二百十四條、第二百十七條、第二百六十八條、第二百六十八條之一第二項、第三項、第二百六十八條之二第一項、第三百七十一條第一項、第二項及第三百七十二條關於法院或審判長權限之規定，於受命法官行準備程序時準用之。
+* 130.1 當事人、代理人之所在處所或所在地法院與行政法院間，有聲音及影像相互傳送之科技設備而得直接審理者，行政法院認為適當時，得依聲請或依職權以該設備審理之。前項情形，其期日通知書記載之應到處所為該設備所在處所。依第一項進行程序之筆錄及其他文書，須陳述人簽名者，由行政法院傳送至陳述人所在處所，經陳述人確認內容並簽名後，將筆錄及其他文書以電信傳真或其他科技設備傳回行政法院。第一項之審理及前項文書傳送之辦法，由司法院定之。
 
-> 釋：一、受命法官就有關命補正能力、法定代理權、訴訟代理權、訴訟所必要之允許或其他訴訟要件之欠缺（第二十八條、第三十六條規定準用民事訴訟法第四十九條、第五十六條規定準用民事訴訟法第七十五條第一項及本法第一百零七條第一項但書）、命當事人預納裁判費訴訟行為須支出之費用（第一百條第一項前段、第二項）、命當事人提出附屬文件之原本（第五十九條規定準用民事訴訟法第一百二十條第一項）、命補正書狀之欠缺（第五十九條規定準用民事訴訟法第一百二十一條第一項、第二項）、於知悉訴訟標的有移轉時，以書面將訴訟繫屬之事實通知第三人（第一百十條第四項）。准否保全證據之裁定（第一百七十六條規定準用民事訴訟法第三百七十一條第一項、第二項、第三百七十二條）等程序上較為細瑣之問題，如由受命法官先行處理，將有助於訴訟程序之迅速進行，而達到審理集中化之目標。又關於是否准許委任非律師為訴訟代理人（第四十九條第三項至第六項）、是否准許當事人或訴訟代理人於期日協同輔佐人到場（第五十五條）、命送達於當事人本人（第六十六條但書、第六十七條但書）、法院於言詞辯論前得為之處置（第一百二十一條第一項第一款至第四款）及依職權調查事實關係與向當事人發問或告知（第一百二十五條）等規定，於受命法官行準備程序時，亦應準用，爰增列於本條，與原規定併列。二、依第一百三十二條準用民事訴訟法第二百七十條之一第一項第三款規定，受命法官為闡明訴訟關係，得進行整理並協議簡化爭點，基於此項權限，受命法官於必要時，本即得定期間命當事人就整理爭點之結果提出摘要書狀，於當事人未依規定提出書狀或聲明證據時，亦得依聲請或依職權命該當事人以書狀說明其理由。為求明確，爰於本條增訂民事訴訟法第二百六十八條之一第二項、第三項及第二百六十八條之二第一項關於法院或審判長權限之規定，於受命法官行準備程序時準用之。
+> 釋：一、本條新增。二、為顧及處於遠隔行政法院處所之當事人、代理人，便利訴訟之進行，第一項明定行政法院認為適當時，得依聲請或依職權進行遠距視訊審理，以便利當事人利用法院，並兼顧審理之迅捷。而為當事人之法人、中央及地方機關，其代表人自亦得援此規定聲請之。至於證人、鑑定人、輔佐人部分，依行政訴訟法第一百七十六條準用民事訴訟法第三百零五條，及依行政訴訟法第一百五十六條之規定，經法院認為適當時，本得對證人、鑑定人為遠距訊問，自無庸另作規定。又依行政訴訟法第五十五條第一項之規定，輔佐人既係由當事人或代理人偕同到場，因此如法院對於當事人或代理人為遠距視訊審理，則自得對偕同到場之輔佐人為遠距視訊。三、第二項規定行政法院為遠距視訊審理時，其期日通知書記載之應到處所，為該設備所在處所，俾當事人、代理人知悉到場。四、第三項明定進行遠距視訊審理時，筆錄及其他文書須陳述人簽名時，其傳送之方式。五、由於科技設備之種類及文書傳送之細節，應隨科技發展狀況而定，宜另以辦法訂定，爰於第四項規定其辦法由司法院定之，以求彈性。
+
+* 131 第四十九條第三項至第六項、第五十五條、第六十六條但書、第六十七條但書、第一百條第一項前段、第二項、第一百零七條第一項但書、第一百十條第四項、第一百二十一條第一項第一款至第四款、第二項、第一百二十四條、第一百二十五條、第一百三十條之一及民事訴訟法第四十九條、第七十五條第一項、第一百二十條第一項、第一百二十一條第一項、第二項、第二百條、第二百零七條、第二百零八條、第二百十三條第二項、第二百十三條之一、第二百十四條、第二百十七條、第二百六十八條、第二百六十八條之一第二項、第三項、第二百六十八條之二第一項、第三百七十一條第一項、第二項及第三百七十二條關於法院或審判長權限之規定，於受命法官行準備程序時準用之。
+
+> 釋：配合第一百三十條之一之增訂，於本條增訂第一百三十條之一關於法院權限之規定，於受命法官行準備程序時準用之。
 
 * 132 民事訴訟法第一百九十五條至第一百九十七條、第二百條、第二百零一條、第二百零四條、第二百零六條至第二百零八條、第二百十條、第二百十一條、第二百十四條、第二百十五條、第二百十七條至第二百十九條、第二百六十五條至第二百六十八條之一、第二百六十八條之二、第二百七十條至第二百七十一條之一、第二百七十三條至第二百七十六條之規定，於本節準用之。
 
