--- a/司法-民事/公司法.md
+++ b/司法-民事/公司法.md
@@ -678,9 +678,9 @@
 
 > 釋：一、原公司法第一百九十六條規定，董事之報酬，章程未訂明者，應由股東會決議定之。本條原意為避免董事利用其為公司經營者之地位與權利，恣意索取高額報酬，故不以董事會決議為足，而須將董事報酬委由章程與股東會決議定之。二、然而現行實務上由於我國公司股權結構係屬於相對集中之類型，其結果是公司的董監事大多由大股東兼任，因此多有公司監督制衡機制失靈之情形，公司董事與監事勾結，自行恣意給與高額報酬，無法透過市場機制形成公正的金額，從而可能連帶造成公司營運不佳之虧損。三、因此，在公司參與政府專案核定之紓困方案時，其董事之報酬應由主管機關訂立法定上限之相關辦法，以免造成公司在有營運不佳情形，其董事仍得恣意索取高額報酬之不公，爰特於第一百九十六條增訂第二項，準用第二十九條第二項之規定。四、就公開發行股票公司監察人部分，依本法第二百二十七條準用董事規定之結果，在公司參與政府專案核定之紓困方案時，其報酬亦受有法定限制。
 
-* 197 董事經選任後，應向主管機關申報，其選任當時所持有之公司股份數額；公開發行股票之公司董事在任期中轉讓超過選任當時所持有之公司股份數額二分之一時，其董事當然解任。董事在任期中其股份有增減時，應向主管機關申報並公告之。董事任期未屆滿提前改選者，當選之董事，於就任前轉讓超過選任當時所持有之公司股份數額二分之一時，或於股東會召開前之停止股票過戶期間內，轉讓持股超過二分之一時，其當選失其效力。
+* 197 董事經選任後，應向主管機關申報，其選任當時所持有之公司股份數額；公開發行股票之公司董事在任期中轉讓超過選任當時所持有之公司股份數額二分之一時，其董事當然解任。董事在任期中其股份有增減時，應向主管機關申報並公告之。公開發行股票之公司董事當選後，於就任前轉讓超過選任當時所持有之公司股份數額二分之一時，或於股東會召開前之停止股票過戶期間內，轉讓持股超過二分之一時，其當選失其效力。
 
-> 釋：一、第一項為配合證券交易法第二十六條公開發行股票之公司董事任期中轉讓持股超過選任當時股份總數二分之一，當然解任，並酌作文字修正。二、對公司於董事任期屆滿前提前改選，則自選任時至就任此一期間轉讓股份，或於股東會召開前之過戶閉鎖期間轉讓持股之情形，原條文均未予規範，顯有缺失，爰增訂第三項。
+> 釋：一、由本法前次修正理由，可知前次之修正目的在於防免選任時至就任時兩時點間大量股份轉讓，而使同條第一項的管制存有漏洞，是故新增規定以彌補之。二、第三項酌作文字調整。
 
 * 197.1 董事之股份設定或解除質權者，應即通知公司，公司應於質權設定或解除後十五日內，將其質權變動情形，向主管機關申報並公告之。但公開發行股票之公司，證券管理機關另有規定者，不在此限。公開發行股票之公司董事以股份設定質權超過選任當時所持有之公司股份數額二分之一時，其超過之股份不得行使表決權，不算入已出席股東之表決權數。
 
