--- a/行政-內政/自來水法.md
+++ b/行政-內政/自來水法.md
@@ -38,13 +38,17 @@
 
 > 釋：照黨團協商條文通過。
 
-* 12.2 於水質水量保護區內取用地面水或地下水者，除該區內非營利之家用及公共給水外，應向中央主管機關繳交水源保育與回饋費。其為工業用水或公共給水之公用事業，得報經中央主管機關同意後，於其公用事業費用外附徵百分之五以上百分之十五以下之費額。供農業使用者，中央主管機關及中央農業主管機關應編列預算補助。補助對象及方式之辦法，由中央主管機關會同中央農業主管機關定之。前項水源保育與回饋費之徵收項目、對象、計算方式、費率、徵收方式、繳費流程、繳納期限、繳費金額不足之追補繳、取用水資源量之計算方法及其他應遵行事項之收費辦法，由中央主管機關會商有關機關依水源或用水標的分別定之。第一項水源保育與回饋費得納入中央主管機關水資源相關基金管理運用，專供水質水量保護區內辦理水資源保育與環境生態保育基礎設施、居民公共福利回饋及受限土地補償之用，其支用項目如下：一、辦理水資源保育、排水、生態遊憩觀光設施及其他水利設施維護管理事項。二、辦理居民就業輔導、具公益性之水資源涵養與保育之地方產業輔導、教育獎助學金、醫療健保及電費、非營利之家用自來水水費補貼等公共福利回饋事項。三、發放因水質水量保護區之劃設，土地受限制使用之土地所有權人或相關權利人補償金事項。四、原住民族地區租稅補助事項。五、供緊急使用之準備金。六、徵收水源保育與回饋費之相關費用事項。七、使用水源保育與回饋費之必要執行事項。八、其他有關居民公益及水資源教育、研究與保育事項。前項第三款之補償應視土地使用現況、使用面積及受限制程度，發給補償金，並由主管機關與土地所有權人或相關權利人締結行政契約。補償對象以私有土地所有權人或相關權利人為優先，其發放標準及契約範本，由中央主管機關會同行政院原住民族委員會及相關部會定之。其行政契約應明訂所有權人或相關權利人土地容許使用項目、違約處罰方式等。支用於第三項第一款至第五款、第七款及第八款之經費，由水質水量保護區專戶運用小組依其區內土地面積及居民人口比例，分配運用於區內各鄉（鎮、市、區）。但原住民族鄉應從優考量。水質水量保護區內非營利之家用自來水水費減半收取，其減收費額由水源保育與回饋費支應。保護區內原住民地區非屬自來水供水系統之簡易供水設施，應加速辦理。同一鄉（鎮、市、區）公所跨二以上保護區者，其水源保育與回饋費，得經各該保護區之運用小組協調及審議通過後運用之。
+* 12.2 於水質水量保護區內取用地面水或地下水者，除該區內非營利之家用及公共給水外，應向中央主管機關繳交水源保育與回饋費。其為工業用水或公共給水之公用事業，得報經中央主管機關同意後，於其公用事業費用外附徵百分之五以上百分之十五以下之費額。供農業使用者，中央主管機關及中央農業主管機關應編列預算補助。補助對象及方式之辦法，由中央主管機關會同中央農業主管機關定之。前項水源保育與回饋費之徵收項目、對象、計算方式、費率、徵收方式、繳費流程、繳納期限、繳費金額不足之追補繳、取用水資源量之計算方法及其他應遵行事項之收費辦法，由中央主管機關會商有關機關依水源或用水標的分別定之。第一項水源保育與回饋費得納入中央主管機關水資源相關基金管理運用，專供水質水量保護區內辦理水資源保育與環境生態保育基礎設施、居民公共福利回饋及受限土地補償之用，其支用項目如下：一、辦理水資源保育、排水、生態遊憩觀光設施及其他水利設施維護管理事項。二、辦理居民就業輔導、具公益性之水資源涵養與保育之地方產業輔導、教育獎助學金、醫療健保及電費、非營利之家用自來水水費補貼、與水資源保育有關之地方公共建設等公共福利回饋事項。三、發放因水質水量保護區之劃設，土地受限制使用之土地所有權人或相關權利人補償金事項。四、原住民族地區租稅補助事項。五、供緊急使用之準備金。六、徵收水源保育與回饋費之相關費用事項。七、使用水源保育與回饋費之必要執行事項。八、其他有關居民公益及水資源教育、研究與保育事項。前項第三款之補償應視土地使用現況、使用面積及受限制程度，發給補償金，並由主管機關與土地所有權人或相關權利人締結行政契約。補償對象以私有土地所有權人或相關權利人為優先，其發放標準及契約範本，由中央主管機關會同行政院原住民族委員會及相關部會定之。其行政契約應明訂所有權人或相關權利人土地容許使用項目、違約處罰方式等。支用於第三項第一款至第五款、第七款及第八款之經費，由水質水量保護區專戶運用小組依其區內土地面積及居民人口比例，分配運用於區內各鄉（鎮、市、區）。但原住民族鄉應從優考量。水質水量保護區內非營利之家用自來水水費減半收取，其減收費額由水源保育與回饋費支應。保護區內原住民地區非屬自來水供水系統之簡易供水設施，應加速辦理。同一鄉（鎮、市、區）公所跨二以上保護區者，其水源保育與回饋費，得經各該保護區之運用小組協調及審議通過後運用之。
 
-> 釋：一、本條第三項規定：「水源保育與回饋費得納入中央主管機關水資源相關基金管理運用，專供水質水量保護區內辦理水資源保育與環境生態保育基礎設施、居民公共福利回饋及受限土地補償之用。」二、有關居民公共福利回饋及受限土地補償方式，以自來水水費補貼，最符合公平受益原則，並能具體實現回饋居民之宗旨。三、為解決原住民部落供水問題，行政院原住民委員會已依據年度預算程序，編列預算辦理「原住民族部落水資源規劃及供水計畫」，因此保護區內原住民地區供水系統，應依據該項計畫加速辦理之。四、增訂第六項，明訂：「水質水量保護區內非營利之家用自來水水費減半收取。保護區內原住民地區非屬自來水供水系統之簡易供水設施，應加速辦理」。五、為免同一鄉（鎮、市、區）公所跨二以上保護區者，其水源保育與回饋費有所差異，爰增列第七項，得經各該保護區之運用小組協調及審議通過後運用之。
+> 釋：水資源保育與回饋費應專做改善水質水量保護區之環境、改善因保護區設立而權益受損民眾之環境，並加強其公共建設，及用做水資源保育相關工作，故修正原條文第三項第二款有關水源保育與回饋費支用項目之規定。
 
 * 12.3 水資源相關基金應依各水質水量保護區分別設置專戶，各專戶並設置運用小組管理運用。專戶運用小組成員由相關中央主管機關、水質水量保護區與其用水地區地方主管機關、民意機關代表、居民代表及社會公正人士組成；其設置要點由水資源相關基金管理委員會定之。涉及原住民族地區之水質水量保護區，其專戶運用小組居民代表成員，應依比例由原住民居民代表擔任；其水源保育與回饋費，應依比例運用於原住民族地區。本法中華民國九十三年六月三十日修正公布施行前，附徵之水源特定區協助地方建設費用，於水源保育與回饋費徵收前，繼續於水價外附徵；其協助臺北水源特定區地方建設辦法，繼續適用。水源保育與回饋費徵收後，原依本法附徵之水源特定區協助地方建設費用，納入水源特定區專戶管理運用。
 
 > 釋：為使原依本法第十二條之一附徵之水源特定區協助地方建設費用，於水源保育與回饋費徵收前能依法繼續於水價外附徵與協助台北水源特定區內之地方建設，爰新增第十二條之三第三項。原第十二條之三第三項移列四項，並酌修相關文字。
+
+* 12.4 水質水量保護區符合下列情形之一者，其分配之水源保育與回饋費，應繳還中央主管機關水資源相關基金，並由中央主管機關撥交該水質水量保護區所屬縣市、直轄市政府主管機關統籌辦理水資源保育事項：一、分配至公所年度經費逾五年未執行之餘額。二、經專戶運用小組同意繳回之經費。水質水量保護區水源保育與回饋費經專戶運用小組同意，得運用於部分位於水質水量保護區同村（里）之全部行政區域。但以供水資源保育之公共建設事項為限。
+
+> 釋：一、本條新增。二、為妥善運用水資源保育與回饋費，對於多年未使用之經費，經專戶小組同意，應由縣市、直轄市政府主管機關視該行政區域內水資源保護之需求統籌運用，以促進公共利益。三、部分水質水量保護區位於渺無人煙之地，同一村里居民雖未住在保護區內，但生活也同樣受到影響，為妥善運用水資源保育與回饋費，應將水資源保育與回饋費用於保護區所屬村里之全部行政區，並限定專做水資源保育及公共建設之用。
 
 * 13 中央主管機關得視自來水之水源分佈、工程建設及社會經濟情形，劃定區域，實施區域供水。前項經劃定之區域，中央主管機關得因事實需要修正或變更之。
 
@@ -166,9 +170,13 @@
 
 * 51 自來水事業因工程上之必要，得洽商有關主管機關使用河川、溝渠、橋梁、涵洞、堤防、道路等，但以不妨礙其原有效用為限。
 
-* 52 自來水事業於必要時，得在公私土地下埋設水管或其他設備，工程完畢時，應恢復原狀，並應事先通知土地所有權人或使用人。
+* 52 自來水事業於其供水區內或直轄市、縣（市）政府於轄區內因自來水工程上之必要，得在公、私有土地下埋設水管或其他設備，工程完畢時，應恢復原狀，並應事先通知土地所有權人或使用人。
 
-* 53 前條使用公私土地，應擇其損害最少之處所及方法為之，如有損害，應按損害之程度予以補償，其有爭議時，由主管機關會商有關機關核定之。
+> 釋：為因應部分直轄市、縣（市）政府興辦或代辦自來水事業或簡易自來水事業水管埋設或其他工程，爰增列之。
+
+* 53 前條使用公、私有土地，應擇其損害最少之處所及方法為之，如有損害，應按損害之程度予以補償。前項處所、方法選擇及補償如有爭議時，自來水事業、土地所有權人或使用人得報請直轄市、縣（市）主管機關核定之。前項爭議補償之裁量基準，由中央主管機關定之。第二項補償核定且償金發放或提存完成後，土地所有權人或使用人不得拒絕自來水事業或直轄市、縣（市）政府之使用。自來水事業並得請求直轄市、縣（市）政府協助使用之。
+
+> 釋：一、為避免因前條土地使用之處所、方法及補償有所爭議，致影響用戶權益，並保障土地所有權人權益，將原條文第一項後段移列第二項，文字配合修正，規範爭議與補償處理機制。二、增列第三項，明定爭議補償之裁量基準，由中央主管機關定之。三、為避免爭議曠日廢時，影響公眾用水之權益，爰增列第四項，補償核定且償金發放或提存完成後，土地所有權人或使用人不得拒絕自來水事業或直轄市、縣（市）政府之使用；此外自來水事業於使用時亦得請求直轄市、縣（市）政府協助之。
 
 * 54 自來水事業依第五十一條、第五十二條之規定，埋設於都市計劃區域內公有道路及其預定地之水管或其他設備，因都市計劃之變更，必須遷移或拆除者，自來水事業得請求補償。其補償金額由雙方協議決定，協議不成，由主管機關核定之。
 
@@ -200,9 +208,9 @@
 
 * 61 自來水事業在其供水區域內，對於請求供水者，非有正當理由，不得拒絕。前項請求供水者，對拒絕供水如有異議，得申請主管機關核定之。
 
-* 61.1 第二十三條規定之用戶加壓受水設備所使用之土地應於興建完成時移轉為用戶所有或設定地上權予用戶後，始得供水；用戶加壓受水設備所使用之土地非屬用戶所有，但使用年限已達十年以上者，其用戶就該等土地視為有地上權存在，並得於取得土地所有權前為必要之維護更新。前項加壓受水設備委託自來水事業代管者，自來水事業得計收工程改善費、操作維護費及其他一切必要之費用，其標準由自來水事業訂定，報請主管機關備查。
+* 61.1 第二十三條規定之用戶加壓受水設備所使用之私有土地應由用戶取得該私有土地之所有權或地上權，始得供水。用戶加壓受水設備所使用土地為公有土地，應取得公有土地管理機關使用許可或同意書。用戶加壓受水設備所使用土地為既成計畫道路，經道路主管機關許可挖掘埋設者，用戶得免取得所有權或設定地上權，並得為必要之維護與更新。用戶加壓受水設備所使用之土地非屬用戶所有，但自自來水事業供水日起，使用年限已達十年以上者，其用戶就該等土地視為有地上權存在，得於直轄市、縣（市）主管機關同意，並保證工程完畢後恢復原狀下，在取得土地所有權前為必要之維護與更新。用戶使用他人私有或公有土地，應擇其損害最少之處所及方法為之，並予以補償。前項處所、方法選擇及補償如有爭議時，用戶、土地所有權人或使用人得報請直轄市、縣（市）主管機關核定之。第五項補償之核定，得適用第五十三條第三項之裁量基準。第一項加壓受水設備委託自來水事業代管者，自來水事業得計收工程改善費、操作維護費及其他一切必要之費用，其標準由自來水事業訂定，報請主管機關備查。
 
-> 釋：一、本條新增，為使加壓受水設備所有權與使用權合一，以避免紛爭，爰規定取得土地所有權或地上權為供水之要件。二、為保障既有加壓受水設備用戶之使用自來水權利，參照本地第110條之1規定，使用年限已達十年以上者，於取得土地所有權之前，得為必要之維護更新。三、第二項為明定加壓受水設備委託自來水事業代管者，其所發生之支出費用，由自來水事業訂定之。
+> 釋：一、為使原條文第一項使用年限已達十年以上者，明確其起算點，爰修正自自來水事業供水日起，以茲明確，並移列為第四項。二、公有土地常因政府不允許私人取得所有權或設定地上權，致無法供水，爰增列第二項，明定公有土地，取得公有土地管理機關許可使用同意書。三、所使用土地若為既成道路，因政府早年未徵收，而存在私有土地，常因土地所有權複雜而無法取得所有權或設定地上權，致產生沿路居民無法供水之情事，爰於第三項規定用戶加壓受水設備所使用土地為既成計畫道路，其經道路主管機關許可挖掘埋設者，用戶得免予取得所有權或設定地上權。四、第一項規範，實務上常因土地取得或使用補償而衍生爭執，雖可循民法爭訟之，但常因耗時費日，甚有影響用戶供水權益之情事。爰增列第五、六項，允許用戶、土地所有權人或使用人得報請直轄市、縣（市）主管機關核定，以解決爭議；並增列補償之核定，得適用第五十三條第三項之裁量基準。五、原條文第二項移列第八項，並配合修正文字。
 
 * 62 自來水事業對自來水用戶應經常供水，如因災害、緊急措施或工程施工而停止全部或一部供水時，應將停水區域及時間事先通告周知，並呈報所在地主管機關核備；但停止供水事故係臨時發生者，得於事後補報。其有特殊情形必須連續停水達十二小時以上或定時供水者，應先申請所在地主管機關核准，並公告周知。自來水用戶對於前項停止供水，不得要求任何損失賠償。
 
