刑事訴訟法 2013.1.4

--- a/司法-刑事/刑事訴訟法.md
+++ b/司法-刑事/刑事訴訟法.md
@@ -64,9 +64,9 @@
 
 > 釋：一、本條原僅針對起訴後被告之辯護人而設。茲因起訴前亦許被告或犯罪嫌疑人選任辯護人，本條自應予以配合修正。二、辯護人之選任，固應以書面為之，惟本條第二項規定之「委任狀」，易與司法狀紙相混，尤其犯罪嫌疑人於司法警察官或司法警察調查中欲選任辯護人時，如必須前往法院購用司法狀紙，顯有不便，自宜參照本法第二百四十二條第一項用語，改訂為「委任書狀」，以資概括。爰將本條第一項修正為：「選任辯護人，應提出委任書狀」。三、本條修正第二項，規定起訴前辯護人之選任，在檢察官偵查中被告或其家屬等所具之委任書狀，應提出於檢察官，在司法警察官或司法警察調查中犯罪嫌疑人或其家屬等所具之委任書狀，應提出於司法警察官。至於起訴後辯護人之選任，仍照現行作法，應於每審級提出於法院。
 
-* 31 最輕本刑為三年以上有期徒刑或高等法院管轄第一審案件或被告因智能障礙無法為完全之陳述，於審判中未經選任辯護人者，審判長應指定公設辯護人或律師為其辯護；其他審判案件，低收入戶被告未選任辯護人而聲請指定，或審判長認有必要者，亦同。前項案件選任辯護人於審判期日無正當理由而不到庭者，審判長得指定公設辯護人。被告有數人者，得指定一人辯護。但各被告之利害相反者，不在此限。指定辯護人後，經選任律師為辯護人者，得將指定之辯護人撤銷。被告因智能障礙無法為完全之陳述，於偵查中未經選任辯護人者，檢察官應指定律師為其辯護。第二項至第四項之規定於前項之指定，準用之。
+* 31 有下列情形之一，於審判中未經選任辯護人者，審判長應指定公設辯護人或律師為被告辯護：一、最輕本刑為三年以上有期徒刑案件。二、高等法院管轄第一審案件。三、被告因智能障礙無法為完全之陳述。四、被告具原住民身分，經依通常程序起訴或審判者。五、被告為低收入戶或中低收入戶而聲請指定者。六、其他審判案件，審判長認有必要者。前項案件選任辯護人於審判期日無正當理由而不到庭者，審判長得指定公設辯護人或律師。被告有數人者，得指定一人辯護。但各被告之利害相反者，不在此限。指定辯護人後，經選任律師為辯護人者，得將指定之辯護人撤銷。被告或犯罪嫌疑人因智能障礙無法為完全之陳述或具原住民身分者，於偵查中未經選任辯護人，檢察官、司法警察官或司法警察應通知依法設立之法律扶助機構指派律師到場為其辯護。但經被告或犯罪嫌疑人主動請求立即訊問或詢問，或等候律師逾四小時未到場者，得逕行訊問或詢問。
 
-> 釋：一、 被告因智能障礙未經選任辯護人者，在審判中屬於強制辯護案件，審判長應指定公設辯護人或律師為其辯護。其在檢察官偵查中，如無辯護人予以協助，顯不足以保障權利。應將本條關於智能障礙者強制辯護之規定擴及於檢察官偵查階段。爰增定第五項，使因智能障礙無法為完全之陳述之被告於檢察官偵查時亦得有指定辯護規定之適用。二、 偵查之指定辯護，亦有第二項至第四項之情形，爰增定第六項明定其準用規定。
+> 釋：一、由於原住民族司法人權低落，司法權利亟待提昇，加上社會救助法業已修正，爰於第一項增列被告具原住民身分或中低收入戶，審判中未經選任辯護人者，審判長應指定公設辯護人或律師為其辯護。第五項增列被告或犯罪嫌疑人如係因智能障礙無法為完全之陳述或具原住民身分者，於偵查中未經選任辯護人，檢察官、司法警察官或司法警察應通知財團法人法律扶助基金會指派律師到場為其辯護。二、參酌刑事訴訟法第九十三條之一第一項第五款於被告或犯罪嫌疑人已選任辯護人時，尚可等待四小時；而第六款被告或犯罪嫌疑人須由通譯傳譯時，等候時間為六小時。故於第五項增列被告或犯罪嫌疑人，如係因智能障礙無法為完全之陳述或具原住民身分者，其等待財團法人法律扶助基金會指派律師到場為其辯護之時間為六小時。三、第一項本文之「左列」修正為「下列」。四、第二項句末增列「或律師」三字，以增加審判長指定辯護之對象。五、為發揮法律扶助法之功能，落實法律扶助之精神，第五項爰增列通知「依法設立之法律扶助機構」等文字，且就等候律師到場時間為「四小時」。
 
 * 32 被告有數辯護人者，送達文書應分別為之。
 
@@ -242,9 +242,9 @@
 
 * 94 訊問被告，應先詢其姓名、年齡、籍貫、職業、住、居所，以查驗其人有無錯誤，如係錯誤應即釋放。
 
-* 95 訊問被告應先告知左列事項：一、犯罪嫌疑及所犯所有罪名。罪名經告知後，認為應變更者，應再告知。二、得保持緘默，無須違背自己之意思而為陳述。三、得選任辯護人。四、得請求調查有利之證據。
+* 95 訊問被告應先告知下列事項：一、犯罪嫌疑及所犯所有罪名。罪名經告知後，認為應變更者，應再告知。二、得保持緘默，無須違背自己之意思而為陳述。三、得選任辯護人。如為低收入戶、中低收入戶、原住民或其他依法令得請求法律扶助者，得請求之。四、得請求調查有利之證據。無辯護人之被告表示已選任辯護人時，應即停止訊問。但被告同意續行訊問者，不在此限。
 
-> 釋：參考承認被告有緘默權之立法例，明定訊問被告時，應告以「無須違背自己之意思而為陳述」，以保障被告得自由陳述及保持緘默之權利。
+> 釋：一、有鑑於低收入戶、中低收入戶、勞工、原住民均屬法律上弱勢，應積極予以法律扶助，爰修正第一項第一款，訊問被告或犯罪嫌疑人，如被告或犯罪嫌疑人係低收入戶、中低收入戶、勞工、原住民或其他依法令得請求法律扶助者，應告知得請求法律扶助。二、第一項本文之「左列」修正為「下列」。三、第一項第三款修正為「得選任辯護人。如為低收入戶、中低收入戶、原住民或其他依法令得請求法律扶助者，得請求之。」，以使用語更為周全。四、增列第二項「無辯護人之被告表示已選任辯護人時，應即停止訊問。但被告同意續行訊問者，不在此限。」以保護被告之權益，同時但書設有被告同意續行訊問之機制，以示尊重被告。
 
 * 96 訊問被告，應與以辯明犯罪嫌疑之機會；如有辯明，應命就其始末連續陳述；其陳述有利之事實者，應命其指出證明之方法。
 
