--- a/司法-民事/公司法.md
+++ b/司法-民事/公司法.md
@@ -478,9 +478,9 @@
 
 * 153 創立會結束後，認股人不得將股份撤回。
 
-* 154 股東對於公司之責任，以繳清其股份之金額為限。
+* 154 股東對於公司之責任，除第二項規定外，以繳清其股份之金額為限。股東濫用公司之法人地位，致公司負擔特定債務且清償顯有困難，其情節重大而有必要者，該股東應負清償之責。
 
-> 釋：現行公司法改採授權資本制，公司股東之股額應一次繳足，故將第二項刪除。
+> 釋：一、配合第二項之增訂，爰修正第一項。二、增訂第二項。按揭穿公司面紗之原則，係源於英、美等國判例法，其目的在防免股東濫用公司之法人地位而脫免責任導致債權人之權利落空，求償無門。為保障債權人權益，我國亦有引進揭穿公司面紗原則之必要。爰明定倘股東有濫用公司之法人地位之情形，導致公司負擔特定債務而清償有顯著困難，且其情節重大而有必要者，該股東仍應負擔清償債務之責任。法院適用揭穿公司面紗之原則時，其審酌之因素，例如審酌該公司之股東人數與股權集中程度；系爭債務是否係源於該股東之詐欺行偽；公司資本是否顯著不足承擔其所營事業可能生成之債務等情形。
 
 * 155 發起人對於公司設立事項，如有怠忽其任務致公司受損害時，應對公司負連帶賠償責任。發起人對於公司在設立登記前所負債務，在登記後亦負連帶責任。
 
